--- a/arc-ai-platform/package.json
+++ b/arc-ai-platform/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier": "^3.2.4",
     "vite": "^5.0.8"
   }
 }
