--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/material": "^5.15.11",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-autocomplete-hint": "^2.0.0",
     "react-autosuggest": "^10.1.0",
