--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@esbuild/win32-x64": "^0.20.1",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@react-spring/parallax": "^9.7.3",
+    "@rollup/rollup-win32-x64-msvc": "^4.12.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
     "js-cookie": "^3.0.5",
