--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-spring/parallax": "^9.7.3",
     "@rollup/rollup-win32-x64-msvc": "^4.12.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "firebase": "^10.8.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-autocomplete-hint": "^2.0.0",
     "react-autosuggest": "^10.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
