--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@esbuild/win32-x64": "^0.20.1",
     "@mui/base": "^5.0.0-beta.37",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@react-spring/parallax": "^9.7.3",
-    "@rollup/rollup-win32-x64-msvc": "^4.12.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
     "js-cookie": "^3.0.5",
@@ -25,7 +23,9 @@
     "react-autocomplete-hint": "^2.0.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
