--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "reagraph": "^4.15.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
