--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "reagraph": "^4.15.19"
+    "reagraph": "^4.15.19",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.21.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
